# nova-gateway-telegram-bot

./: .dockerignore  .env.sample  Cargo.toml  Dockerfile  LICENSE  README.md
src/: main.rs  utils.rs
src/bot/: controller.rs  dto.rs  handler.rs  helpers.rs  mod.rs
src/config/: configuration.rs  dto.rs  mod.rs
src/nova/: client.rs  dto.rs  helpers.rs  mod.rs
